tests/__snapshots__/validation-target-not-valid-range-within-union-stderr.snap.txt
Error: The specified range '5.3 >5.5' is not valid.

A range must be specified using an operator and a minor version: '>=5.5'.
To set an upper bound, use the intersection of two ranges: '>=5.0 <5.3'.
Use the '||' operator to join ranges into a union: '>=5.2 <=5.3 || 5.4.2 || >5.5'.

  1 | {
  2 |   "target": ">=5.2 || 5.3 >5.5",
    |             ~~~~~~~~~~~~~~~~~~~
  3 |   "testFileMatch": [
  4 |     "examples/*.tst.*"
  5 |   ]

      at ./tstyche.config.json:2:13

